[project]
name = "1073-datenkonverter-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.53.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
